igt@debugfs_test@read_all_entries* - abort - This test caused an abort condition: Lockdep not active, BUG: kernel NULL pointer dereference, address: 0000000000000080
<1> [145.746863] BUG: kernel NULL pointer dereference, address: 0000000000000080
<1> [145.746868] #PF: supervisor read access in kernel mode
<1> [145.746870] #PF: error_code(0x0000) - not-present page
<6> [145.746872] PGD 0 P4D 0
<4> [145.746876] Oops: 0000 [#1 (moved)] PREEMPT SMP NOPTI
<4> [145.746879] CPU: 4 PID: 1364 Comm: debugfs_test Not tainted 6.7.0-rc4-CI_DRM_13990-g85d33d0ad82a+ #1 (moved)
<4> [145.746883] Hardware name: Intel Corporation Meteor Lake Client Platform/MTL-P DDR5 SODIMM SBS RVP, BIOS MTLPFWI1.R00.3424.D84.2310311355 10/31/2023
<4> [145.746885] RIP: 0010:i915_psr_status_show+0x12/0x50 [i915]